Prevent zooming on mobile devices when tapping buttons

--- a/public/styles/misc.css
+++ b/public/styles/misc.css
@@ -16,6 +16,10 @@ html {
     font-size: 16px;
 }
 
+html button, html input[type="button"] {
+    touch-action: manipulation;
+}
+
 @media screen and (min-width: 320px) {
     html {
         font-size: calc(16px + (16 - 16) * ((100vw - 320px) / (750 - 320)));
